# gsoc_discord

./: .gitignore  README.md  config.example.yaml  config.yaml  export_state.json  pyproject.toml
.github/workflows/: daily-export.yml
exports/My Server/general/: 2026-02-26.md  2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-06.md  2026-03-07.md  2026-03-08.md  2026-03-09.md  2026-03-10.md  2026-03-11.md  2026-03-12.md  2026-03-13.md  2026-03-14.md  2026-03-15.md  2026-03-16.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  2026-03-26.md  2026-03-27.md  2026-03-28.md  2026-03-29.md  2026-03-30.md  2026-03-31.md  2026-04-01.md  2026-04-08.md
exports/My Server/gsoc-2026-bazel/: 2026-03-10.md  2026-03-11.md  2026-03-12.md  2026-03-17.md  2026-03-18.md  2026-03-20.md  2026-03-28.md
exports/My Server/gsoc-2026-chipathon/: 2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-06.md  2026-03-07.md  2026-03-08.md  2026-03-09.md  2026-03-10.md  2026-03-11.md  2026-03-12.md  2026-03-17.md  2026-03-19.md  2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-26.md  2026-03-30.md  2026-04-09.md
exports/My Server/gsoc-2026-cugr/: 2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-06.md  2026-03-07.md  2026-03-08.md  2026-03-11.md  2026-03-20.md  2026-03-27.md  2026-03-28.md
src/discord_summary/: __init__.py  __main__.py  bot.py  config.py  exporter.py
tests/: __init__.py  test_config.py  test_markdown.py  test_state.py
(+141 files in other folders)
